salt/downloads/bugs/fixes/bug_issue_descriptions/salt-58809
**Description**
salt fails to build with Python 3.9.0 on macOS:

```
    In file included from c/_cffi_backend.c:7552:
    In file included from c/cffi1_module.c:20:
    c/call_python.c:26:30: error: incomplete definition of type 'struct _is'
        builtins = tstate->interp->builtins;
                   ~~~~~~~~~~~~~~^
```

**Setup**
This is a build as part of Homebrew (https://github.com/Homebrew/homebrew-core/pull/62864). The same build with Python 3.8.6 works fine. As far as I can see, the version of cffi is set to 1.12.2 here https://github.com/saltstack/salt/blob/998c382f5f2c3b4cbf7d96aa6913ada6993909b3/requirements/static/ci/py3.9/darwin.txt#L21 but this is too old to be compatible with Python 3.9. More recent versions of cffi work fine.
